--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@
 body {
   width: 850px;
   height: 100%;
-  background-color: #ffffff ;
+  background-color: #f8f8ff ;
   /*color: #222;*/
   margin: 0;
 }
