--- a/style2.css
+++ b/style2.css
@@ -1,78 +1,84 @@
-
 body {
-  width: 850px;
-  height: 100%;
-  background-color: #f8f8ff ;
-  /*color: #222;*/
-  margin: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f8f8ff;
+    /*color: #222;*/
+    margin: 0;
+}
+
+#container {
+    width: 70%;
+    min-width: 600px;
+    margin: auto;
 }
 
 #headline {
-  width: 700px;
-  height: 100px;
-  text-align: center;
-  margin-left: 50px;
+    width: 80%;
+    height: 80px;
+    text-align: center;
+    /* margin-left: 50px; */
+    margin: auto;
 }
 
 h1 {
-  font-family: "Droid Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 22px;
-  color: #333333;
-  margin: 20px 0 20px 0;
-  /*border-bottom: dotted 1px #969696;*/
+    font-family: 'Droid Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    color: #333333;
+    margin: 20px 0 20px 0;
+    /*border-bottom: dotted 1px #969696;*/
 }
 
 .author {
-  font-family: "Droid Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  color: #8a2be2;
-  text-rendering: optimizeLegibility;
-  margin: 0 20px 0 20px;
+    font-family: 'Droid Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    color: #8a2be2;
+    text-rendering: optimizeLegibility;
+    margin: 0 20px 0 20px;
 }
 
 .book {
-  font-family: "Droid Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  color: #1e90ff;
-  text-rendering: optimizeLegibility;
-  margin: 0 20px 0 20px;
+    font-family: 'Droid Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    color: #1e90ff;
+    text-rendering: optimizeLegibility;
+    margin: 0 20px 0 20px;
 }
 
 .comment {
-  font-family: "Droid Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 17px;
-  color: #333333;
-  text-rendering: optimizeLegibility;
-  margin: 0 20px 0 20px;
+    font-family: 'Droid Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    color: #333333;
+    text-rendering: optimizeLegibility;
+    margin: 0 20px 0 20px;
 }
 
 .quote {
-  font-family: "Droid Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 17px;
-  color: #6D6E70; 
-  text-rendering: optimizeLegibility;
-  text-align: left;
-  margin: 0 20px 0 20px;
+    font-family: 'Droid Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    color: #6d6e70;
+    text-rendering: optimizeLegibility;
+    text-align: left;
+    margin: 0 20px 0 20px;
 }
 
-.quote:before, .quote:after {
-  content: '"';
+.quote:before,
+.quote:after {
+    content: '"';
 }
 
 /*.bullet:before {
   content: '∙';
 }*/
-
 
 /*blue
 color: #6baed6;
